# TEG---Technologie-Generatywne

./: .gitignore  README.md  pyproject.toml
03_11_25/streamlit-app/: config.yaml  config_manager.py
03_27_25/: qa_pairs.json  ragas-sample-evaluation.ipynb
04_03_25/: 01_intro_to_agents.ipynb  02_communicate_with_db.ipynb  03_llm_react.ipynb
04_08_25/: 01_graphs.ipynb  02_assistant_lvl_1.ipynb  03_assistant_lvl_2.ipynb
04_08_25/multi-agent-assistant-wip/: README.md
04_08_25/multi-agent-assistant-wip/prompts/: editor.yaml  outliner.yaml  search.yaml  writer.yaml
04_08_25/multi-agent-assistant-wip/src/: app.py  workflow.py
04_08_25/multi-agent-assistant-wip/src/agents/: agent_factory.py  agent_state.py
04_08_25/multi-agent-assistant-wip/src/managers/: config_manager.py  prompt_manager.py
04_15_25/: README.md  multiagent_graphs_with_langsmith.ipynb
04_22_25/: advanced-agents-processes.ipynb  sample-multi-agent-research-flow.ipynb
07_03_25/: 07_03_25.ipynb
11_03_25/backend-app/: app.py  client.py
11_03_25/backend-app/src/: openai_service.py
11_03_25/streamlit-app/: app.py
19_03_25/: nlp-intro.ipynb
27_03_25/: advanced-genai.ipynb  rag-materials.ipynb  ragas-evaluator.py
simple_rag_project/: README.md  app.py  config.yaml  config_manager.py  pyproject.toml  requirements.txt
simple_rag_project/backend/: chain.py  hyde.py  pdf_loader.py  rag.py  semantic_chunking.py  splitter.py  vector_store.py
simple_rag_project/frontend/: chatbot.py
