[project]
name = "teg-technologie-generatywne"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "langchain>=0.3.21",
    "langchain-core>=0.3.48",
    "langchain-openai>=0.3.10",
    "notebook>=7.3.3",
    "python-dotenv>=1.0.1",
    "streamlit>=1.43.2",
]
